--- a/src/main/resources/templates/midtrans/success.html
+++ b/src/main/resources/templates/midtrans/success.html
@@ -10,38 +10,31 @@
         var url = window.location.href.split("?");
         var responData = url[url.length-1];
         var responCode = responData.split("status_code=")[1].split("&")[0];
+        var responIdOrder = responData.split("order_id=")[1];
         var dataOrder;
-        console.log(responCode);
-        // fetch("http://localhost:8081/api/order/show/"+idOrder,{
-        //     // Adding method type 
-        //     method: "GET", 
-                            
-        //     // Adding headers to the request 
-        //     headers: { 
-        //         "Content-type" : "application/json; charset=UTF-8",
-        //         // "Authorization" : "Basic "+token
-        //     } 
-        // })
-        // .then(response => response.json())
-        // .then(result => {
-            
-        //     dataRespon = result.payload;
-        //     dataOrder = JSON.stringify({ 
-        //         payment_type: "bank_transfer",
-        //         transaction_details: {
-        //             order_id: idOrder,
-        //             gross_amount: dataRespon.totalPayment,
-        //             date_order : dataRespon.dateOrder,
-        //             customer : dataRespon.customer.name
-        //         }
-        //     });
-        //     console.log(dataOrder);
-        //     gotoMidtrans();
-        // }).catch(err => {
-        //     errorStat = err.name === 'AbortError'? 1 : 2;
-        // });
-
+        console.log(responCode+" "+responIdOrder);
         
+        if(parseInt(responCode) == 200){
+            fetch("http://localhost:8081/api/order/paymentSuccess/"+responIdOrder,{
+                // Adding method type 
+                method: "GET", 
+                                
+                // Adding headers to the request 
+                headers: { 
+                    "Content-type" : "application/json; charset=UTF-8",
+                    // "Authorization" : "Basic "+token
+                } 
+            })
+            .then(response => response.json())
+            .then(result => {
+                console.log("finish");
+                window.location.href="http://localhost:8081/transaction"
+            }).catch(err => {
+                errorStat = err.name === 'AbortError'? 1 : 2;
+            });
+
+            
+        }
     </script>
 </body>
 </html>
