--- a/src/main/resources/templates/customers/fragments/header.html
+++ b/src/main/resources/templates/customers/fragments/header.html
@@ -104,7 +104,7 @@
                                             style="margin-left: -200px;">
                                             <a class="dropdown-item" href="./order">Order</a>
                                             <a class="dropdown-item" href="./transaction">Transaction</a>
-                                            <a class="dropdown-item" href="./setting">Setting</a>
+                                            <a class="dropdown-item" href="./profile">Setting</a>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="#" onclick="logout()"
                                                 id="logoutBtn">Logout</a>
