--- a/src/main/resources/templates/admins/fragments/header.html
+++ b/src/main/resources/templates/admins/fragments/header.html
@@ -16,7 +16,7 @@
     <script>
         var token = localStorage.getItem('token');
         var roles = localStorage.getItem('roles');
-        if (token === null) {
+        if (token === null || roles !== 'ADMIN') {
             window.location.href = "../admin/login";
         }
     </script>
