--- a/src/main/resources/templates/admins/order.html
+++ b/src/main/resources/templates/admins/order.html
@@ -130,7 +130,7 @@
             var token = localStorage.getItem('token');
 
             function showData(){
-                fetch("http://localhost:8081/api/order",{
+                fetch(window.location.origin+"/api/order",{
                     // Adding method type 
                     method: "GET", 
                                     
@@ -166,7 +166,7 @@
                 });
             }
 
-            fetch("http://localhost:8081/api/orderStatus",{
+            fetch(window.location.origin+"/api/orderStatus",{
                 // Adding method type 
                 method: "GET", 
                                 
@@ -208,7 +208,7 @@
                 document.getElementById("statusForm").innerHTML=statusData;
             
                 
-                fetch("http://localhost:8081/api/orderDetail/show/"+orderAll[idOrder].id,{
+                fetch(window.location.origin+"/api/orderDetail/show/"+orderAll[idOrder].id,{
                     // Adding method type 
                     method: "GET", 
                                     
@@ -258,7 +258,7 @@
                         orderStatus: orderStatusAll[statusId].id
                     })
                 );
-                fetch("http://localhost:8081/api/order/update",{
+                fetch(window.location.origin+"/api/order/update",{
                     // Adding method type 
                     method: "POST", 
                     body: JSON.stringify({ 
