merapikan code dan tampilan

--- a/src/main/resources/templates/customers/fragments/header.html
+++ b/src/main/resources/templates/customers/fragments/header.html
@@ -46,11 +46,11 @@
             <div class="offcanvas__close">+</div>
             <ul class="offcanvas__widget">
                 <li><span class="icon_search search-switch"></span></li>
-                <li><a href="#"><span class="icon_heart_alt"></span>
+                <!-- <li><a href="#"><span class="icon_heart_alt"></span>
                         <div class="tip">2</div>
-                    </a></li>
+                    </a></li> -->
                 <li><a href="#"><span class="icon_bag_alt"></span>
-                        <div class="tip">2</div>
+                        <!-- <div class="tip">2</div> -->
                     </a></li>
                 <li><a href="#"><span class="icon_archive_alt"></span>
                         <div class="tip">2</div>
@@ -89,11 +89,11 @@
                             </div>
                             <ul class="header__right__widget">
                                 <li><span class="icon_search search-switch"></span></li>
-                                <li><a href="./wishlist"><span class="icon_heart_alt"></span>
+                                <!-- <li><a href="./wishlist"><span class="icon_heart_alt"></span>
                                         <div class="tip" id="wishlistTip">2</div>
-                                    </a></li>
+                                    </a></li> -->
                                 <li><a id="cart" href=""><span class="icon_bag_alt"></span>
-                                        <div class="tip" id="cartTip">2</div>
+                                        <!-- <div class="tip" id="cartTip">2</div> -->
                                     </a></li>
                                 <li>
                                     <div class="dropdown">
