--- a/src/main/resources/templates/customers/fragments/footer.html
+++ b/src/main/resources/templates/customers/fragments/footer.html
@@ -37,8 +37,7 @@
                             <div class="footer__logo">
                                 <a href="./"><img th:src="@{/img/logo.png}" alt=""></a>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                cilisis.</p>
+                            <p></p>
                         </div>
                     </div>
 
@@ -48,9 +47,7 @@
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         <div class="footer__copyright__text">
                             <p>Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                                template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
-                                    href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                                <script>document.write(new Date().getFullYear());</script>  <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://hapepedia.herokuapp.com/" target="_blank">Hapepedia - BCA x Arkademy</a></p>
                         </div>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
