--- a/src/main/resources/templates/customers/shop.html
+++ b/src/main/resources/templates/customers/shop.html
@@ -47,7 +47,7 @@
     <section class="shop spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-3">
+                <!-- <div class="col-lg-3 col-md-3">
                     <div class="shop__sidebar">
                         <div class="sidebar__categories">
                             <div class="section-title">
@@ -255,8 +255,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-9 col-md-9">
+                </div> -->
+                <div class="col-lg-12 col-md-12">
                     <!-- <div class="col-lg-4 col-md-6">
                         <div class="product__item">
                             <div class="product__item__pic set-bg">
